Tue Dec 08 00:06:31 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/: Backport licenses from the xappy2 repository at
	  http://code.google.com/p/xappy2/.  Also, some minor tidying up of
	  inline calls to doctest - these are no longer required since the
	  top level test script can be used instead.  Also, fix
	  documentation comment for query.py which had been cut-and-pasted
	  from searchconnection.py.

Mon Dec 07 20:18:51 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/: Split the inverters into separate files, and
	  fallback to inmemory if numpy is not available.  Various other
	  code tidyups.

Mon Dec 07 14:15:03 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py,xappy/searchresults.py: Split the
	  SearchResults and SearchResult classes out of
	  searchconnection.py, as a first step to making the code a bit
	  more readable.  Also, minimise the number of imported symbols,
	  get rid of the "*" in "from foo import *", and use the proper
	  names of various imports rather than prefixing them with an
	  underscore.

Sat Dec 05 23:50:15 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/doctests/indexerconnection_doctest1.txt: Be less fussy
	  about required text in exception message (it's changed with
	  latest Xapian).

Sat Dec 05 23:37:58 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Link to packages
	  built with new version of xapian.

Wed Dec 02 01:16:00 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,
	  xappy/cachemanager/xapian_manager.py: Use the hash of query
	  strings, rather than the raw strings, to avoid problems with key
	  length limits in xapian.  Store the raw string additionally, so
	  we can report a cache miss in the event of a collision, and so we
	  can iterate through the stored query strings.

Tue Dec 01 23:54:39 GMT 2009  Richard Boulton <richard@tartarus.org>
