@@ -1,4 +1,5 @@
 # Copyright (C) 2007,2008,2009 Lemur Consulting Ltd
+# Copyright (C) 2009 Richard Boulton
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
