@@ -42,7 +42,7 @@ from indexerconnection import IndexerConnection, PrefixedTermIter, \
          DocumentIter, SynonymIter, _allocate_id
 from query import Query
 
-from searchresults import SearchResults
+from searchresults import SearchResults, MSetResultOrdering
 
 class ExternalWeightSource(object):
     """A source of extra weight information for searches.
@@ -2155,10 +2155,12 @@ class SearchConnection(object):
         if usesubfacets:
             facet_hierarchy = self._facet_hierarchy
 
-        res = SearchResults(self, enq, query, mset, self._field_mappings,
+        res = SearchResults(self, query, self._field_mappings,
                             facetspies, facetfields,
                             facet_hierarchy,
-                            self._facet_query_table.get(query_type))
+                            self._facet_query_table.get(query_type),
+                            MSetResultOrdering(mset),
+                            mset)
 
         if collapse is not None:
             res.collapse_slotnum = collapse_slotnum
